WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50639
Fix pauseAnimation API to work with shorthand properties
https://bugs.webkit.org/show_bug.cgi?id=50639
Summary
Fix pauseAnimation API to work with shorthand properties
Simon Fraser (smfr)
Reported
2010-12-07 11:53:52 PST
The pauseAnimation API used by DRT doesn't work with CSS shorthand properties, forcing us to use flakey time-based tests.
Attachments
Patch
(9.82 KB, patch)
2010-12-07 23:10 PST
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-12-07 23:10:42 PST
Created
attachment 75876
[details]
Patch
mitz
Comment 2
2010-12-08 09:31:36 PST
Comment on
attachment 75876
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=75876&action=review
> WebCore/page/animation/CompositeAnimation.cpp:526 > if (!implAnim || !implAnim->running())
No need to test for !implAnim here anymore.
Simon Fraser (smfr)
Comment 3
2010-12-08 09:38:18 PST
http://trac.webkit.org/changeset/73526
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug